tests/fixtures/invalid/bool_mul_dict.py
# Cannot multiply Bool and Dict[str, int]
x: bool = True * {"a": 1}
